<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_fondo"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        tools:context="mx.com.sybrem.appbiochem.CapturaPedidos"
        tools:showIn="@layout/activity_captura_pedidos">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_cliente"
                            android:id="@+id/textView"
                            android:textSize="20dp" />


                        <AutoCompleteTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/autoCompleteTextView"
                            android:ems="20"
                            android:layout_margin="10dp"
                            android:textSize="20dp"
                            android:background="@drawable/edittextstyle"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_familia"
                            android:id="@+id/textFamilia"
                            android:textSize="20dp" />

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/lstViewFamilia"
                            android:spinnerMode="dialog"
                            android:layout_margin="10dp"
                            android:ems="20"
                            android:background="@drawable/edittextstyle"
                            ></Spinner>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_subTipo"
                            android:id="@+id/lblSubTipo"
                            android:textSize="20dp"
                            />

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/lstViewSubtipo"
                            android:spinnerMode="dialog"
                            android:layout_margin="10dp"
                            android:ems="20"
                            android:background="@drawable/edittextstyle"
                            ></Spinner>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_tipo_venta"
                            android:id="@+id/lblTipoVenta"
                            android:textSize="20dp" />

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/lstViewTipoVenta"
                            android:spinnerMode="dialog"
                            android:layout_margin="10dp"
                            android:ems="20"
                            android:background="@drawable/edittextstyle"
                            ></Spinner>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_conducto"
                            android:id="@+id/lblConducto"
                            android:textSize="20dp" />

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/lstViewConducto"
                            android:spinnerMode="dialog"
                            android:layout_margin="10dp"
                            android:ems="20"
                            android:background="@drawable/edittextstyle"
                            ></Spinner>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_comentarios"
                            android:id="@+id/lblComentarios"
                            android:textSize="20dp" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:ems="20"
                            android:id="@+id/edtComentarios"
                            android:layout_margin="10dp"
                            android:background="@drawable/edittextstyle"
                            android:textSize="20dp"/>

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:stretchColumns="3">

                            <TableRow>
                                <TextView
                                    android:text=""
                                    />
                            </TableRow>

                            <TableRow>

                                <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    style="?android:attr/buttonStyleSmall"
                                    android:text="Salir"
                                    android:id="@+id/btnPedidosSalir"
                                    android:background="@drawable/buttonstylesalir"
                                    android:textColor="#FFFFFF"
                                    android:ems="5"
                                    android:layout_marginRight="5dp"/>

                                <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    style="?android:attr/buttonStyleSmall"
                                    android:text="Siguiente"
                                    android:id="@+id/btnPedidosPartidas"
                                    android:background="@drawable/buttonstylesiguiente"
                                    android:textColor="#FFFFFF"
                                    android:ems="5" />

                            </TableRow>

                        </TableLayout>

    </LinearLayout>

</ScrollView>
